--- a/templates/forms/default/data.html.twig
+++ b/templates/forms/default/data.html.twig
@@ -13,7 +13,7 @@
                     {% block field %}
                         <div>
                             {% block field_label %}
-                                <strong>{{ field.label|t|e }}</strong>:
+                                <strong>{{ field.label|t|raw }}</strong>:
                             {% endblock %}
 
                             {% block field_value %}
